Fix overflow issue

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -1,4 +1,5 @@
 .home {
+   overflow-x: clip;
    position: relative;
 
    &__circle {
