--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -106,6 +106,6 @@
       display: block;
       position: absolute;
       top: -80px;
-      left: -50px;
+      left: -25px;
    }
 }
